--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE = "http://localhost:5000"
-# VITE_API_BASE = "https://zf9bwtsv-8000.asse.devtunnels.ms"
+# VITE_API_BASE = "http://localhost:5000"
+VITE_API_BASE = "https://zf9bwtsv-5000.asse.devtunnels.ms"
