--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.90.5",
+    "antd": "^6.0.0",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
