fix register input to antd component

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_API_BASE = "http://localhost:5000"
-VITE_API_BASE = "https://l3gbvm4r-8000.asse.devtunnels.ms"
+VITE_API_BASE = "https://zf9bwtsv-5000.asse.devtunnels.ms"
 # VITE_API_BASE = "https://abdimas.chevalierlabsas.org"
